# agente-telegram

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 05c82d02b05d_tabela_de_historico_de_chat.py  12a70cbc3426_coluna_de_controle_do_job.py  e21be2965988_primeira_versao.py
scripts/: set_webhook.py
src/agente_telegram/: app.py  bot.py  main.py
src/agente_telegram/config/: settings.py
src/agente_telegram/jobs/: inactive_user.py
src/agente_telegram/model/: base_model.py  users_history.py  users_telegram.py
src/agente_telegram/service/: google_ai.py  user_telegram.py  users_history.py
src/agente_telegram/util/: engine_postgre.py  get_session.py
